[package]
name = "fpsmath-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.14"
twilight-http = "0.11.0"
twilight-gateway = "0.11.0"
twilight-model = "0.11.0"
twilight-util = { version = "0.11.0", features = ["builder"] }
futures = "0.3.21"
tokio = { version = "1.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
    "parking_lot",
] }
serde_json = "1.0"
serde = "1.0"
parking_lot = "0.12.1"
